[gd_scene load_steps=27 format=2]

[ext_resource path="res://Menu/Load_Screen.gd" type="Script" id=1]
[ext_resource path="res://Menu/Grass_field-1.png.png" type="Texture" id=2]
[ext_resource path="res://Godot-Fontpack/Godot-Fontpack-d244bf6170b399a6d4d26a0d906058ddf2dafdf1/fonts/architect-s-daughter/ArchitectsDaughter.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Godot-Fontpack/pixel.tres" type="DynamicFont" id=4]
[ext_resource path="res://Sprites/Enemy/PngsFiles/New Piskel-1.png.png" type="Texture" id=5]

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Godot-Fontpack/Godot-Fontpack-d244bf6170b399a6d4d26a0d906058ddf2dafdf1/fonts/poco/Poco.ttf"

[sub_resource type="DynamicFont" id=4]
size = 250
font_data = SubResource( 3 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.203922, 0.960784, 0.533333, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.113725, 0.533333, 0.294118, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.580392, 0.372549, 0.0392157, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="DynamicFontData" id=22]
font_path = "res://Godot-Fontpack/Godot-Fontpack-d244bf6170b399a6d4d26a0d906058ddf2dafdf1/fonts/poco/Poco.ttf"

[sub_resource type="DynamicFont" id=21]
size = 150
font_data = SubResource( 22 )

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Godot-Fontpack/Godot-Fontpack-d244bf6170b399a6d4d26a0d906058ddf2dafdf1/fonts/poco/Poco.ttf"

[sub_resource type="DynamicFont" id=23]
size = 150
extra_spacing_bottom = 50
font_data = SubResource( 1 )
fallback/0 = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=24]
bg_color = Color( 0.74902, 0.0117647, 0.0117647, 1 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="DynamicFontData" id=28]
font_path = "res://Godot-Fontpack/Godot-Fontpack-d244bf6170b399a6d4d26a0d906058ddf2dafdf1/fonts/poco/Poco.ttf"

[sub_resource type="DynamicFont" id=9]
size = 100
font_data = SubResource( 28 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.203922, 0.960784, 0.533333, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_right = 100

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.580392, 0.372549, 0.0392157, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_right = 100
corner_radius_bottom_right = 4

[sub_resource type="StyleBoxFlat" id=25]
bg_color = Color( 0.486275, 0.0823529, 0.0627451, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 100

[sub_resource type="StyleBoxFlat" id=26]
bg_color = Color( 0.533333, 0.145098, 0.145098, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 100

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.192157, 0.192157, 0.192157, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5

[sub_resource type="DynamicFontData" id=27]
font_path = "res://Godot-Fontpack/Godot-Fontpack-d244bf6170b399a6d4d26a0d906058ddf2dafdf1/fonts/poco/Poco.ttf"

[sub_resource type="DynamicFont" id=18]
size = 150
font_data = SubResource( 27 )

[sub_resource type="DynamicFontData" id=14]
font_path = "res://Godot-Fontpack/Godot-Fontpack-d244bf6170b399a6d4d26a0d906058ddf2dafdf1/fonts/poco/Poco.ttf"

[sub_resource type="DynamicFont" id=15]
size = 200
font_data = SubResource( 14 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_left = -1926.0
margin_top = -1112.0
margin_right = 1965.0
margin_bottom = 1126.0

[node name="Sprite" type="Sprite" parent="Panel"]
position = Vector2( 1917, 2717 )
scale = Vector2( 9.50753, 14.1772 )
texture = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 3.5, 3.5 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = -0.096
anchor_right = -0.096
margin_left = -1689.7
margin_top = -401.0
margin_right = 1887.3
margin_bottom = 329.0
custom_constants/separation = 50

[node name="Load 1" type="Button" parent="HBoxContainer"]
margin_right = 1159.0
margin_bottom = 730.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 13 )
custom_styles/normal = SubResource( 12 )

[node name="Label" type="Label" parent="HBoxContainer/Load 1"]
margin_left = 56.0039
margin_top = -21.0
margin_right = 1023.0
margin_bottom = 708.0
custom_fonts/font = SubResource( 21 )
text = "Name:

Current Boss:
"

[node name="Delete" type="Button" parent="HBoxContainer/Load 1"]
visible = false
margin_left = 2.00391
margin_top = -169.0
margin_right = 223.004
margin_bottom = 61.0
custom_fonts/font = SubResource( 23 )
custom_styles/normal = SubResource( 24 )
text = "X"

[node name="Load 2" type="Button" parent="HBoxContainer"]
margin_left = 1209.0
margin_right = 2368.0
margin_bottom = 730.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 13 )
custom_styles/normal = SubResource( 12 )

[node name="Label" type="Label" parent="HBoxContainer/Load 2"]
margin_left = 56.0039
margin_top = -21.0
margin_right = 1023.0
margin_bottom = 708.0
custom_fonts/font = SubResource( 21 )
text = "Name:

Current Boss:
"

[node name="Delete2" type="Button" parent="HBoxContainer/Load 2"]
visible = false
margin_left = 58.0078
margin_top = -190.0
margin_right = 279.008
margin_bottom = 40.0
custom_fonts/font = SubResource( 23 )
custom_styles/normal = SubResource( 24 )
text = "X"

[node name="Load 3" type="Button" parent="HBoxContainer"]
margin_left = 2418.0
margin_right = 3577.0
margin_bottom = 730.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 13 )
custom_styles/normal = SubResource( 12 )

[node name="Label" type="Label" parent="HBoxContainer/Load 3"]
margin_left = 56.0039
margin_top = -21.0
margin_right = 1023.0
margin_bottom = 708.0
custom_fonts/font = SubResource( 21 )
text = "Name:
 
Current Boss:
"

[node name="Delete3" type="Button" parent="HBoxContainer/Load 3"]
visible = false
margin_left = 58.0078
margin_top = -190.0
margin_right = 279.008
margin_bottom = 40.0
custom_fonts/font = SubResource( 23 )
custom_styles/normal = SubResource( 24 )
text = "X"

[node name="Back To Menu" type="Button" parent="."]
margin_left = -1804.0
margin_top = 832.0
margin_right = -1008.0
margin_bottom = 1068.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 9 )
custom_styles/hover = SubResource( 10 )
custom_styles/focus = SubResource( 13 )
custom_styles/normal = SubResource( 11 )
text = "Back To Menu"

[node name="Delete" type="Button" parent="."]
margin_left = 1003.0
margin_top = 829.0
margin_right = 1799.0
margin_bottom = 1065.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 9 )
custom_styles/hover = SubResource( 25 )
custom_styles/focus = SubResource( 25 )
custom_styles/normal = SubResource( 26 )
text = "Delete Save"

[node name="WindowDialog" type="Panel" parent="."]
visible = false
margin_left = -733.0
margin_top = -309.0
margin_right = 734.0
margin_bottom = 262.0
custom_styles/panel = SubResource( 16 )

[node name="Label" type="Label" parent="WindowDialog"]
margin_left = 56.0
margin_top = 12.0
margin_right = 1535.0
margin_bottom = 564.0
custom_fonts/font = SubResource( 18 )
text = "Can't Find Save File
"
autowrap = true

[node name="Yes" type="Button" parent="WindowDialog"]
visible = false
margin_left = 172.0
margin_top = 392.0
margin_right = 552.0
margin_bottom = 536.0
rect_pivot_offset = Vector2( -931, -37 )
custom_fonts/font = ExtResource( 4 )
text = "Yes"

[node name="No" type="Button" parent="WindowDialog"]
visible = false
margin_left = 911.0
margin_top = 393.0
margin_right = 1291.0
margin_bottom = 537.0
rect_pivot_offset = Vector2( -931, -37 )
custom_fonts/font = ExtResource( 4 )
text = "No"

[node name="Popup" type="Popup" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="LineEdit" type="LineEdit" parent="Popup"]
margin_left = -1030.0
margin_right = 1025.0
margin_bottom = 250.0
custom_fonts/font = SubResource( 15 )
text = "Text"

[node name="Saving" type="Sprite" parent="."]
visible = false
position = Vector2( 1594, -827 )
scale = Vector2( 0.756944, 0.756944 )
texture = ExtResource( 5 )

[connection signal="pressed" from="HBoxContainer/Load 1" to="." method="_on_Load_1_pressed"]
[connection signal="pressed" from="HBoxContainer/Load 1/Delete" to="." method="_on_Delete_pressed"]
[connection signal="pressed" from="HBoxContainer/Load 2" to="." method="_on_Load_2_pressed"]
[connection signal="pressed" from="HBoxContainer/Load 2/Delete2" to="." method="_on_Delete2_pressed"]
[connection signal="pressed" from="HBoxContainer/Load 3" to="." method="_on_Load_3_pressed"]
[connection signal="pressed" from="HBoxContainer/Load 3/Delete3" to="." method="_on_Delete3_pressed"]
[connection signal="pressed" from="Back To Menu" to="." method="_on_Back_To_Menu_pressed"]
[connection signal="pressed" from="Delete" to="." method="_on_Delete_toggle_pressed"]
[connection signal="pressed" from="WindowDialog/Yes" to="." method="_on_Yes_pressed"]
[connection signal="pressed" from="WindowDialog/No" to="." method="_on_No_pressed"]
[connection signal="text_entered" from="Popup/LineEdit" to="." method="_on_LineEdit_text_entered"]
